--- a/bin/config.ini
+++ b/bin/config.ini
@@ -18,6 +18,7 @@ title=股票分析会
 [user]
 reg_gid=4
 nopriv_msg='您没有权限，获取服务请联系<br/><font face="Georgia" size="18"><b>QQ：<font color="#FF6600">4000800792</font></b></font>'
+serv_gids=1,2
 
 [mail]
 type=smtp
