--- a/bin/config.ini
+++ b/bin/config.ini
@@ -2,7 +2,8 @@
 host=0.0.0.0
 port=8086
 key=DAFdfasdAdft13246567856808756mnoljkl,,m,.ll
-max=1000
+max_clients=200
+max_recvs=2097152
 
 [client]
 version=1.0.0
