用户编辑ucenter api BUG

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -17,7 +17,7 @@ port=25
 secure=
 auth=1
 from=talentzhang2009@126.com
-fromname=美今沃多美证券分析平台
+fromname=全能股市操盘系统
 username=talentzhang2009
 password=Tz555888
 reply=
