添加引用库的编译相关。

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -25,10 +25,10 @@ replyname=
 
 [db]
 type=mysql
-host=localhost
+host=192.168.153.1
 port=3306
-user=fenxihui
-pwd=si@#28798sdlmv#dsdf
+user=root
+pwd=123456
 name=fenxihui
 charset=utf8
 pconnect=1
@@ -36,11 +36,11 @@ tablepre=ssp_
 
 [uc]
 type=mysql
-host=localhost
+host=192.168.153.1
 port=3306
-user=fenxihui
-pwd=si@#28798sdlmv#dsdf
-name=fenxihui
+user=root
+pwd=123456
+name=fdx25
 charset=utf8
 pconnect=1
 tablepre=uc_
