添加基于lampp编译的shell脚本，且数据库连接本机数据库。

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -28,22 +28,22 @@ replyname=
 
 [db]
 type=mysql
-host=192.168.88.1
+host=localhost
 port=3306
 user=root
-pwd=123456
-name=fenxihui
+pwd=1qazXSW23edc
+name=ssp
 charset=utf8
 pconnect=1
 tablepre=ssp_
 
 [uc]
 type=mysql
-host=192.168.88.1
+host=localhost
 port=3306
 user=root
-pwd=123456
-name=fdx25
+pwd=1qazXSW23edc
+name=ssp
 charset=utf8
 pconnect=1
 tablepre=uc_
