添加Cygwin编译支持。

--- a/Makefile.cygwin
+++ b/Makefile.cygwin
@@ -5,13 +5,13 @@ INC_DIR  = $(INST_DIR)/include
 BIN_DIR  = $(INST_DIR)/bin
 BUILD_DIR=$(PWD)/build
 
-CFLAGS   = -O3 -I$(INC_DIR) -I$(INC_DIR)/php -I$(INC_DIR)/php/main -I$(INC_DIR)/php/Zend -I$(INC_DIR)/php/TSRM -I$(INC_DIR)/php/ext -DZTS -DHAVE_LIBGTOP `pkg-config --cflags libgtop-2.0`
-LFLAGS   = -lstdc++ -L$(INST_DIR)/lib -lphp5 -levent -Wl,-rpath,$(INST_DIR)/lib -Wl,-rpath,/usr/lib `pkg-config --libs libgtop-2.0`
+CFLAGS   = -O3 -I$(INC_DIR) -I$(INC_DIR)/php -I$(INC_DIR)/php/main -I$(INC_DIR)/php/Zend -I$(INC_DIR)/php/TSRM -I$(INC_DIR)/php/ext -DZTS
+LFLAGS   = -lstdc++ -L$(INST_DIR)/lib -levent -lpthread -Wl,-rpath,$(INST_DIR)/lib -Wl,-rpath,/usr/lib
 
 all: $(BIN_DIR) $(BUILD_DIR) $(BIN_DIR)/ssp $(BIN_DIR)/daemon
 
 $(BIN_DIR):
-	$(PWD)/reflib.sh
+	$(PWD)/reflib-cygwin.sh
 
 $(BUILD_DIR):
 	@mkdir $@
@@ -19,7 +19,7 @@ $(BUILD_DIR):
 $(BIN_DIR)/ssp: $(BUILD_DIR)/php_ext.o $(BUILD_DIR)/php_func.o $(BUILD_DIR)/socket.o $(BUILD_DIR)/queue.o $(BUILD_DIR)/event.o $(BUILD_DIR)/server.o $(BUILD_DIR)/data.o $(BUILD_DIR)/ssp.o $(BUILD_DIR)/api.o
 	@echo -e "\E[34mbuild ssp"
 	@tput sgr0
-	@$(CC) $(LFLAGS) -o $@ $?
+	@$(CC) $(LFLAGS) -o $@ $? $(INST_DIR)/lib/libphp5.a $(INST_DIR)/lib/libevent.a -lcrypt -lcrypto -lssl -lcrypto -lcrypt -liconv -liconv -lrt -lm  -lxml2 -lz -liconv -lm -lxml2 -lz -liconv -lm -lcrypt -lxml2 -lz -liconv -lm -lcrypt
 
 $(BIN_DIR)/daemon: $(BUILD_DIR)/daemon.o $(BUILD_DIR)/api.o
 	@echo -e "\E[34mbuild daemon\E[m"
@@ -48,8 +48,8 @@ rebuild: kill clean $(BUILD_DIR) $(BIN_DIR)/ssp $(BIN_DIR)/daemon
 retest: kill
 	@echo -e "\E[32m"$@"\E[m"
 	@tput sgr0
-	@$(BIN_DIR)/ssp --port 8086 --nthreads 64 --max-clients 10000 --user sspuser --timeout 300 -f $(PWD)/bin/init.php -s start
+	@$(BIN_DIR)/ssp --port 8086 --nthreads 64 --max-clients 10000 --user administrator --timeout 300 -f $(PWD)/bin/init.php -s start
 
 bench:
 	@echo -e "\E[31m"$@"\E[m"
-	@$(PWD)/bin/bench 127.0.0.1 8086 100 30 1000000
+	@$(PWD)/bin/bench 127.0.0.1 8086 100 5 1000000
