解决压力测试登录密码不正确和用户名不合法问题。

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -19,7 +19,8 @@ host=smtp.126.com
 port=25
 secure=
 auth=1
-from=talentzhang2009@126.com
+sender=talentzhang2009@126.com
+from=talent518@yeah.net
 fromname=全能股市操盘系统
 username=talentzhang2009
 password=Tz555888
