--- a/bin/config.ini
+++ b/bin/config.ini
@@ -28,22 +28,22 @@ reply=
 replyname=
 
 [db]
-type=mysql
-host=localhost
-port=3306
+type=mysqli
+host=localhost:3306
 user=root
 pwd=1qazXSW23edc
+socket=/opt/lampp/var/mysql/mysql.sock
 name=ssp
 charset=utf8
 pconnect=1
 tablepre=ssp_
 
 [uc]
-type=mysql
-host=localhost
-port=3306
+type=mysqli
+host=localhost:3306
 user=root
 pwd=1qazXSW23edc
+socket=/opt/lampp/var/mysql/mysql.sock
 name=ssp
 charset=utf8
 pconnect=1
