修复用户登录让同名连接离线的core dump问题。

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -29,7 +29,7 @@ replyname=
 
 [db]
 type=mysqli
-host=localhost:3306
+host=192.168.1.201:3306
 user=root
 pwd=1qazXSW23edc
 socket=/opt/lampp/var/mysql/mysql.sock
@@ -40,7 +40,7 @@ tablepre=ssp_
 
 [uc]
 type=mysqli
-host=localhost:3306
+host=192.168.1.201:3306
 user=root
 pwd=1qazXSW23edc
 socket=/opt/lampp/var/mysql/mysql.sock
